<?xml version="1.0"?>
<package format="2">
    <name>lanelet_map_msgs</name>
    <version>0.0.1</version>
	<description>lanelet_map_msgs</description>

    <author email="1044338070@qq.com">Tian Yang</author>
    <maintainer email="1044338070@qq.com">Tian Yang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
        <depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>
</package>
